HelloUltraviolet/Fixtures/RejectedSource/SourceText/InvalidStringEscape/Source/Main.uv
//! Rejected lexical specimen for an invalid string escape.

public procedure invalidStringEscapeReference() -> string@View {
    return "bad\q"
}
